# Doge-Utilities

./: .gitignore  .replit  DESCRIPTION.md  LICENSE  Procfile  README.md  converter.py  core.py  database.sql  dump.rdb  erver.py  extra.py  functions.py  language.py  last-command  main.py  pyproject.toml  requirements.txt  server.py  variables.py  webServer.py
databases/: .gitignore  autoroleDatabase.sql  prefixDatabase.sql  settingsDatabase.sql  userCooldowns.sql
static/: commands.html  dashboard.js  donate.html  index.css  index.html  no_servers.html  privacy.html  side_bar.html  status.html  terms.html  web_dashboard.html
